Colaboratory を使用して作成しました

--- a/Pytorch Applstra_予測結果を1つずつ表示.ipynb
+++ b/Pytorch Applstra_予測結果を1つずつ表示.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled29.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMAix039/IP7WAf6UgSQOL8",
+      "authorship_tag": "ABX9TyNOhuu7yctk4WPEjl8+A4QM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -103,7 +103,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,11 +133,11 @@
       "metadata": {
         "id": "ofhExJn0NS0l",
         "colab_type": "code",
+        "outputId": "5846ce73-6019-4f60-d872-18c684db54b7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "d6d28c5b-eb4b-4387-ea62-e414fd3089df"
+        }
       },
       "source": [
         "# モデルの設定\n",
@@ -153,16 +153,8 @@
         "#評価モードにする\n",
         "model_ft.eval()"
       ],
-      "execution_count": 4,
+      "execution_count": 15,
       "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Downloading: \"https://download.pytorch.org/models/resnet18-5c106cde.pth\" to /root/.cache/torch/checkpoints/resnet18-5c106cde.pth\n",
-            "100%|██████████| 44.7M/44.7M [00:00<00:00, 58.0MB/s]\n"
-          ],
-          "name": "stderr"
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -256,7 +248,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 15
         }
       ]
     },
@@ -265,18 +257,18 @@
       "metadata": {
         "id": "-ypu_u_Bd-4_",
         "colab_type": "code",
+        "outputId": "9105f2bf-5075-49d6-9510-46fe0abf1d0c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "4aacc945-1025-4a72-c372-a028cb99d025"
+        }
       },
       "source": [
         "#モデルのサマリー（省略可）\n",
         "from torchsummary import summary\n",
         "summary(model_ft, (3, 224, 224))"
       ],
-      "execution_count": 5,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -370,6 +362,47 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "QUYjV3WJeNE2",
+        "colab_type": "text"
+      },
+      "source": [
+        "#評価用画像のファイルリストを取得"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EIZFkKcreMAb",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "fdd5dba6-ef32-4f51-f6f5-bc4d24f84705"
+      },
+      "source": [
+        "image_path = glob.glob(\"/content/drive/My Drive/Deep_learning/applstra/val/*/*\")\n",
+        "print(image_path[1])\n",
+        "\n",
+        "#対象画像のパスからラベルを抜き出す\n",
+        "label = os.path.basename(os.path.dirname(image_path[1]))\n",
+        "print('Label: '+ label)\n"
+      ],
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content/drive/My Drive/Deep_learning/applstra/val/appl/pd_3e7850611c4cf3ea9261cde0e41656c63703be8f.jpg\n",
+            "Label: appl\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "a3-lyo8Cx3bH",
         "colab_type": "text"
       },
@@ -382,32 +415,45 @@
       "metadata": {
         "id": "rM9pAnY5ud_P",
         "colab_type": "code",
-        "outputId": "1a0d3286-5445-4774-b4e7-f3b8fb5ce4f4",
+        "outputId": "90c5b9dc-e087-4067-e8e2-d0bd4597229d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 235
+          "height": 252
         }
       },
       "source": [
-        "class_name = ['apple', 'strawberry']\n",
         "image_path = '/content/drive/My Drive/Deep_learning/applstra/val/appl/P2019047.JPG'\n",
+        "\n",
+        "#ファイル名よりラベルを抜き出し\n",
+        "class_name = []\n",
+        "class_path = glob.glob('/content/drive/My Drive/Deep_learning/applstra/val/*')\n",
+        "for i in class_path:\n",
+        "    class_name.append(os.path.basename(i))\n",
+        "print(class_name)\n",
         "\n",
         "image=Image.open(image_path)\n",
         "plt.imshow(np.array(image))"
       ],
-      "execution_count": 6,
+      "execution_count": 79,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['appl', 'stra']\n"
+          ],
+          "name": "stdout"
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7fa7e3244470>"
+              "<matplotlib.image.AxesImage at 0x7fa7e0beabe0>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 79
         },
         {
           "output_type": "display_data",
@@ -438,10 +484,10 @@
       "metadata": {
         "id": "IdpSS9PCvppO",
         "colab_type": "code",
-        "outputId": "57b00405-96b5-4bc3-eac6-ed002b48b73a",
+        "outputId": "331475a1-ef34-4b63-abe3-b7842eb65afc",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 285
+          "height": 302
         }
       },
       "source": [
@@ -460,14 +506,20 @@
         "        transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])])\n",
         "image_tensor = transform(image)\n",
         "\n",
-        "print(image_tensor.shape)\n"
+        "print(image_tensor.shape)\n",
+        "\n",
+        "#バッチサイズの次元を先頭に追加した4Dテンソルに変換\n",
+        "image_tensor.unsqueeze_(0)\n",
+        "print(image_tensor.size())  # torch.Size([1, 3, 224, 224])\n",
+        "image_tensor = image_tensor.to(device) #model_ftをGPUに載せる\n"
       ],
-      "execution_count": 9,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "torch.Size([3, 224, 224])\n"
+            "torch.Size([3, 224, 224])\n",
+            "torch.Size([1, 3, 224, 224])\n"
           ],
           "name": "stdout"
         },
@@ -486,35 +538,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "DQ8AVUkqzfc1",
-        "colab_type": "code",
-        "outputId": "b81fbfac-bdc1-4efc-e634-56fd399dc81a",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
-      },
-      "source": [
-        "#バッチサイズの次元を先頭に追加した4Dテンソルに変換\n",
-        "image_tensor.unsqueeze_(0)\n",
-        "print(image_tensor.size())  # torch.Size([1, 3, 224, 224])\n",
-        "\n",
-        "image_tensor = image_tensor.to(device) #model_ftをGPUに載せる\n"
-      ],
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "torch.Size([1, 3, 224, 224])\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "R7uqMqW9z0SB",
@@ -529,7 +552,7 @@
       "metadata": {
         "id": "GMJu-jALzf08",
         "colab_type": "code",
-        "outputId": "5e6cdf57-048b-424f-89b3-26a5df6fff5a",
+        "outputId": "7c8718f9-5482-416f-effb-04a45aea5464",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 50
@@ -540,7 +563,7 @@
         "print(output.size())  # torch.Size([1, 1000])\n",
         "print(output)"
       ],
-      "execution_count": 12,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "stream",
@@ -565,9 +588,35 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "IbdJmP3HsmwR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class pycolor:\n",
+        "    BLACK = '\\033[30m'\n",
+        "    RED = '\\033[31m'\n",
+        "    GREEN = '\\033[32m'\n",
+        "    YELLOW = '\\033[33m'\n",
+        "    BLUE = '\\033[34m'\n",
+        "    PURPLE = '\\033[35m'\n",
+        "    CYAN = '\\033[36m'\n",
+        "    WHITE = '\\033[37m'\n",
+        "    RETURN = '\\033[07m' #反転\n",
+        "    ACCENT = '\\033[01m' #強調\n",
+        "    FLASH = '\\033[05m' #点滅\n",
+        "    RED_FLASH = '\\033[05;41m' #赤背景+点滅\n",
+        "    END = '\\033[0m'"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "tnqgZ_5b89FK",
         "colab_type": "code",
-        "outputId": "c5583efc-258e-4075-dcf1-c09d2912c3cd",
+        "outputId": "a2cbd847-9ff6-4bda-dcb0-ccba5240b4f9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -575,14 +624,19 @@
       },
       "source": [
         "_, pred = torch.max(output, 1)\n",
-        "print('Predicted: ', ' '.join('%5s' % class_name[pred]))"
+        "\n",
+        "if label == class_name[pred]:\n",
+        "    print(pycolor.BLUE+ 'Predicted: '+ class_name[pred] +pycolor.END)\n",
+        "if label != class_name[pred]:\n",
+        "    print(pycolor.RED+ 'Predicted: '+ class_name[pred] +pycolor.END)\n",
+        "\n"
       ],
-      "execution_count": 13,
+      "execution_count": 90,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Predicted:  a p p l e\n"
+            "\u001b[34mPredicted: appl\u001b[0m\n"
           ],
           "name": "stdout"
         }
