Colaboratory を使用して作成しました

--- a/Pytorch Applstra_予測結果を1つずつ表示4.ipynb
+++ b/Pytorch Applstra_予測結果を1つずつ表示4.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled29.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP3BFkt/K7DImyvfc+Jeohu",
+      "authorship_tag": "ABX9TyPmwj9HhDXxg3m4zlGS0FlU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,6 +58,7 @@
         "import time\n",
         "import os\n",
         "import copy\n",
+        "import pandas as pd\n",
         "\n",
         "#Advanced Pytorchから\n",
         "import glob\n",
@@ -225,9 +226,9 @@
         "\n",
         "    #正解は青色、不正解は赤色で表示する\n",
         "    _, pred = torch.max(output, 1)\n",
-        "    predicted_label = class_name[pred]\n",
+        "    model_pred = class_name[pred]\n",
         "\n",
-        "    return(predicted_label)  #class_nameの番号で出力される\n",
+        "    return(model_pred)  #class_nameの番号で出力される\n",
         "\n",
         "def showImage(image_path):\n",
         "    #画像のインポート\n",
@@ -314,16 +315,16 @@
         "colab": {}
       },
       "source": [
-        "TP = 0 #True positive\n",
-        "FP = 0 #False positive\n",
-        "TN = 0 #True negative\n",
-        "FN = 0 #False negative\n",
-        "\n",
+        "TP1, FP1, TN1, FN1, TP2, FP2, TN2, FN2 = [0,0,0,0,0,0,0,0]\n",
+        "image_name_list = []\n",
+        "label_list = []\n",
+        "model_pred_list = []\n",
+        "hum_pred_list = []\n",
         "\n",
         "for i in image_path:\n",
         "    image_name, label = getlabel(i)  #画像の名前とラベルを取得\n",
         "    image_tensor = image_transform(i)  #予測のための画像下処理\n",
-        "    predicted_label = image_eval(image_tensor, label)  #予測結果を出力   \n",
+        "    model_pred = image_eval(image_tensor, label)  #予測結果を出力   \n",
         "    \n",
         "    print('Image: '+ image_name)\n",
         "    print('Label: '+ label)\n",
@@ -332,13 +333,17 @@
         "    print() #空白行を入れる\n",
         "    time.sleep(0.1)\n",
         "\n",
+        "    image_name_list.append(image_name)\n",
+        "    label_list.append(label)\n",
+        "    model_pred_list.append(model_pred)\n",
+        "\n",
         "    if label == class_name[0]:\n",
-        "        if predicted_label == class_name[0]:\n",
+        "        if model_pred == class_name[0]:\n",
         "            TP += 1\n",
         "        else:\n",
         "            FN += 1\n",
         "    elif label == class_name[1]:\n",
-        "        if predicted_label == class_name[1]:\n",
+        "        if model_pred == class_name[1]:\n",
         "            TN += 1\n",
         "        else:\n",
         "            FP += 1\n",
@@ -380,17 +385,50 @@
         "for i in image_path:\n",
         "    image_name, label = getlabel(i)  #画像の名前とラベルを取得\n",
         "    image_tensor = image_transform(i)  #予測のための画像下処理\n",
-        "    predicted_label = image_eval(image_tensor, label)  #予測結果を出力   \n",
+        "    model_pred = image_eval(image_tensor, label)  #予測結果を出力   \n",
         "    \n",
-        "    if label != predicted_label:\n",
+        "    if label != model_pred:\n",
         "        print('Image: '+ image_name)\n",
         "        print('Label: '+ label)\n",
-        "        print('Pred: '+ predicted_label)\n",
+        "        print('Pred: '+ model_pred)\n",
         "        showImage(i)  #画像を表示\n",
         "        print() #空白行を入れる\n",
         "        time.sleep(0.1)\n",
         "    else:\n",
         "        pass"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SI0_WMrLY_Tk",
+        "colab_type": "text"
+      },
+      "source": [
+        "#CSV形式で保存"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YDjO8h0IY_b5",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#print(image_name_list)\n",
+        "#print(label_list)\n",
+        "#print(model_pred_list)\n",
+        "#print(hum_pred_list)\n",
+        "\n",
+        "#ラベルのリストを表示\n",
+        "df = pd.DataFrame({'image_name':image_name_list, 'label':label_list, 'model_pred':model_pred_list})\n",
+        "print(df)\n",
+        "\n",
+        "#CSV形式で保存\n",
+        "df.to_csv('/content/drive/My Drive/Deep_learning/applstra/ModelPred_result.csv')"
       ],
       "execution_count": 0,
       "outputs": []
