--- a/Pytorch_転移学習 データセット自動振り分け.ipynb
+++ b/Pytorch_転移学習 データセット自動振り分け.ipynb
@@ -70,6 +70,7 @@
         "import time\n",
         "import os\n",
         "import copy\n",
+        "import shutil\n",
         "\n",
         "#Advanced Pytorchから\n",
         "import glob\n",
@@ -112,11 +113,7 @@
       "metadata": {
         "id": "fbsPFIplk0Zb",
         "colab_type": "code",
-        "outputId": "08b8a541-64c5-4d67-d67c-66ca8bcdb774",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 178
-        }
+        "colab": {}
       },
       "source": [
         "\n",
@@ -141,23 +138,8 @@
         "!date -R\n",
         "!ls"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /content/drive\n",
-            "Tue, 18 Feb 2020 13:24:03 +0000\n",
-            "Tue, 18 Feb 2020 13:24:06 +0000\n",
-            "drive  gravcont_original  sample_data\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -172,46 +154,37 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GtFlsp2YerVs",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "os.listdir(path+classes[0])"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "WCqvZP10XiXk",
         "colab_type": "code",
+        "outputId": "f7be4f88-052f-49a7-eda8-68ba9c765e90",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
-        },
-        "outputId": "f7be4f88-052f-49a7-eda8-68ba9c765e90"
+        }
       },
       "source": [
         "path = '/content/gravcont_original/datasets/'\n",
         "classes = os.listdir(path)\n",
         "print(classes)\n",
         "\n",
+        "os.mkdir('content/learning')\n",
+        "\n",
+        "\n",
+        "list = 0 * len(classes)\n",
+        "test = 0 * len(classes)\n",
+        "val = 0 * len(classes)\n",
         "k=0\n",
         "for i in classes:\n",
-        "    a = os.listdir(path + i)\n",
+        "    list[k] = os.listdir(path + i)\n",
         "    print(a)\n",
-        "    #test[k] = random.sample(list[k], int(len(list[k])*0.8))\n",
-        "    #print(test[k])\n",
-        "\n",
-        "'''\n",
-        "for i in classes:\n",
-        "    os.mkdir(path + i+'/' + 'train')\n",
-        "    os.mkdir(path + i+'/' + 'val')\n",
-        "'''"
+        "    test[k] = random.sample(list[k], int(len(list[k])*0.8))\n",
+        "    val[k] = [x for x in list[k] if x not in test[k]]\n",
+        "    os.mkdir('content/learning/'+i+'/train')\n",
+        "    os.mkdir('content/learning/'+i+'/val')\n",
+        "        for j in test[k]:\n",
+        "            shutil.move(path+j, 'content/learning/'+i+'test')"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -321,7 +294,7 @@
         "print(\"training data set_total：\"+ str(len(image_datasets['train'])))\n",
         "print(\"validating data set_total：\"+str(len(image_datasets['val'])))"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -394,7 +367,7 @@
         "\n",
         "imshow(out, title=[class_names[x] for x in classes])"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1052,7 +1025,7 @@
         "model_ft = Resnet50_ft_dag()\n",
         "model_ft.load_state_dict(torch.load('/content/drive/My Drive/Deep_learning/resnet50_ft_dag.pth'))"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1082,7 +1055,7 @@
       "source": [
         "print(model_ft)"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1295,7 +1268,7 @@
       "source": [
         "print(model_ft)"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1490,7 +1463,7 @@
       "source": [
         "model_ft, train_loss, valid_loss = train_model(model_ft, criterion, optimizer_ft, exp_lr_scheduler, patience=5, num_epochs=25)"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1625,7 +1598,7 @@
         "plt.show()\n",
         "fig.savefig('loss_plot.png', bbox_inches='tight')"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1655,7 +1628,7 @@
       "source": [
         "visualize_model(model_ft)"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
