Colaboratory を使用して作成しました

--- a/3_2_DataLoader.ipynb
+++ b/3_2_DataLoader.ipynb
@@ -78,17 +78,17 @@
       "metadata": {
         "id": "S6jPDVNTfQbG",
         "colab_type": "code",
+        "outputId": "18ffb151-9a84-46db-d766-d95621a64444",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 125
-        },
-        "outputId": "af168040-daba-4c74-a066-9472640e482c"
+        }
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 4,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -194,15 +194,15 @@
       "metadata": {
         "id": "CIvtkkzsexED",
         "colab_type": "code",
+        "outputId": "aefc0da2-33b2-4612-9f63-99a6ffadd298",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 383
-        },
-        "outputId": "c4df2643-ec62-4bb4-add9-d7ea1dd4b5a8"
+          "height": 52
+        }
       },
       "source": [
         "# 動作確認 ファイルパスのリストを取得\n",
-        "rootpath = \"./data/VOCdevkit/VOC2012/\"\n",
+        "rootpath = \"/content/drive/My Drive/Deep_learning/pytorch_advanced-master/3_semantic_segmentation/data/VOCdevkit/VOC2012/\"\n",
         "\n",
         "train_img_list, train_anno_list, val_img_list, val_anno_list = make_datapath_list(\n",
         "    rootpath=rootpath)\n",
@@ -210,19 +210,15 @@
         "print(train_img_list[0])\n",
         "print(train_anno_list[0])\n"
       ],
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "FileNotFoundError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-3-729138f851e0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m train_img_list, train_anno_list, val_img_list, val_anno_list = make_datapath_list(\n\u001b[0;32m----> 4\u001b[0;31m     rootpath=rootpath)\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_img_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-2-8601c31306c4>\u001b[0m in \u001b[0;36mmake_datapath_list\u001b[0;34m(rootpath)\u001b[0m\n\u001b[1;32m     27\u001b[0m     \u001b[0mtrain_anno_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mline\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_id_names\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m         \u001b[0mfile_id\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# 空白スペースと改行を除去\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m         \u001b[0mimg_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mimgpath_template\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mfile_id\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# 画像のパス\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './data/VOCdevkit/VOC2012/ImageSets/Segmentation/train.txt'"
-          ]
+          "output_type": "stream",
+          "text": [
+            "/content/drive/My Drive/Deep_learning/pytorch_advanced-master/3_semantic_segmentation/data/VOCdevkit/VOC2012/JPEGImages/2007_000032.jpg\n",
+            "/content/drive/My Drive/Deep_learning/pytorch_advanced-master/3_semantic_segmentation/data/VOCdevkit/VOC2012/SegmentationClass/2007_000032.png\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -357,8 +353,8 @@
       "metadata": {
         "id": "fiJyPjYXexFZ",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "a9ce594a-3a5e-432f-af8c-d4c2e366e4e1"
+        "outputId": "a9ce594a-3a5e-432f-af8c-d4c2e366e4e1",
+        "colab": {}
       },
       "source": [
         "# 動作確認\n",
@@ -435,8 +431,8 @@
       "metadata": {
         "id": "LgqPWO9pexGH",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "bc02e1a1-0ceb-4b53-8e1e-097dff3c0d08"
+        "outputId": "bc02e1a1-0ceb-4b53-8e1e-097dff3c0d08",
+        "colab": {}
       },
       "source": [
         "# データローダーの作成\n",
@@ -520,8 +516,8 @@
       "metadata": {
         "id": "mTOdxtNaexG9",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "1d9b4e84-b56e-4edd-8b37-b3c62493f301"
+        "outputId": "1d9b4e84-b56e-4edd-8b37-b3c62493f301",
+        "colab": {}
       },
       "source": [
         "# 実行するたびに変わります\n",
@@ -597,8 +593,8 @@
       "metadata": {
         "id": "HW0u1AZqexHd",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "b8085b7a-0701-4629-9c7b-d4cfef6bd5f8"
+        "outputId": "b8085b7a-0701-4629-9c7b-d4cfef6bd5f8",
+        "colab": {}
       },
       "source": [
         "# 画像データの読み込み\n",
