Colaboratory を使用して作成しました

--- a/3_2_DataLoader.ipynb
+++ b/3_2_DataLoader.ipynb
@@ -235,6 +235,31 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "kLEnaSjXCkx4",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "46a526a9-8a19-4baf-91d6-811c03834436"
+      },
+      "source": [
+        "%cd /content/drive/My Drive/Deep_learning/pytorch_advanced-master/3_semantic_segmentation"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content/drive/My Drive/Deep_learning/pytorch_advanced-master/3_semantic_segmentation\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "ysQTKv6-exEk",
         "colab_type": "code",
         "colab": {}
