Colaboratory を使用して作成しました

--- a/GradCam.ipynb
+++ b/GradCam.ipynb
@@ -269,9 +269,10 @@
         "    feats = features_fn(img.cuda())\n",
         "    _, N, H, W = feats.size() #[1,2048,7,7]\n",
         "    out = classifier_fn(feats) #out: [1,1000]\n",
-        "    c_score = out[0, c]\n",
+        "    c_score = out[0, c]   #c_scoreとは？？\n",
         "\n",
-        "    #print(c_score)\n",
+        "    print(c)\n",
+        "    print(c_score)\n",
         "\n",
         "    grads = torch.autograd.grad(c_score, feats)\n",
         "    w = grads[0][0].mean(-1).mean(-1)           #ここでGlobalAveragePoolingをしている\n",
@@ -300,9 +301,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 284
+          "height": 337
         },
-        "outputId": "913476ae-0a5e-4dd3-beee-f7f09d890446"
+        "outputId": "1a71393d-f893-4fe8-ac5e-13f307bfb7af"
       },
       "source": [
         "mg_path = '/content/drive/My Drive/AI_laboratory_course/goldenretriever-3724972_640.jpg'\n",
@@ -328,13 +329,16 @@
         "    plt.imshow(np.array(sal), alpha=0.5, cmap='jet')\n",
         "plt.show()"
       ],
-      "execution_count": 64,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "207\n",
             "tensor(15.1943, device='cuda:0', grad_fn=<SelectBackward>)\n",
+            "219\n",
             "tensor(11.1446, device='cuda:0', grad_fn=<SelectBackward>)\n",
+            "213\n",
             "tensor(10.6133, device='cuda:0', grad_fn=<SelectBackward>)\n"
           ],
           "name": "stdout"
