Colaboratory を使用して作成しました

--- a/Guided_grad_cam.ipynb
+++ b/Guided_grad_cam.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled43.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM6dhPPWVb+WdSNwu1ItGjD",
+      "authorship_tag": "ABX9TyMt6LrJH3zu9wjznY4KvJle",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -274,6 +274,8 @@
         "colab": {}
       },
       "source": [
+        "img_path = \"/content/drive/My Drive/AI_laboratory_course/bokujyou.jpg\"\n",
+        "\n",
         "if __name__ == '__main__':\n",
         "    \"\"\" python grad_cam.py <path_to_image>\n",
         "    1. Loads an image with opencv.\n",
@@ -287,7 +289,7 @@
         "    # as in the VGG models in torchvision.\n",
         "    grad_cam = GradCam(model=models.vgg19(pretrained=True), target_layer_names=[\"35\"], device=device)\n",
         "\n",
-        "    img = cv2.imread(\"/content/drive/My Drive/AI_laboratory_course/goldenretriever-3724972_640.jpg\", 1)\n",
+        "    img = cv2.imread(img_path, 1)\n",
         "    img = np.float32(cv2.resize(img, (224, 224))) / 255\n",
         "    input = preprocess_image(img)\n",
         "\n",
