Colaboratory を使用して作成しました

--- a/GradCam.ipynb
+++ b/GradCam.ipynb
@@ -55,7 +55,7 @@
         "from matplotlib import pyplot as plt\n",
         "from PIL import Image\n",
         "\n",
-        "#device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")"
+        "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")"
       ],
       "execution_count": 0,
       "outputs": []
@@ -65,7 +65,7 @@
       "metadata": {
         "id": "ili7yBRc8aoN",
         "colab_type": "code",
-        "outputId": "24e98ea5-72cd-4a96-f691-1dab6c8f119c",
+        "outputId": "fd05172f-23be-4e52-fd89-e22b8ff510d1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 125
@@ -75,7 +75,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -196,7 +196,7 @@
         "    classifier_fn = nn.Sequential(*([nn.AvgPool2d(7, 1), Flatten()] + [model.classifier]))\n",
         "    \n",
         "model = model.eval()\n",
-        "model = model.cuda()"
+        "model = model.to(device)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -212,7 +212,7 @@
         "#ネットワークの確認\n",
         "from torchsummary import summary\n",
         "\n",
-        "features_fn = features_fn.cuda()\n",
+        "features_fn = features_fn.to(device)\n",
         "summary(features_fn, (3,224,224))"
       ],
       "execution_count": 0,
@@ -223,16 +223,16 @@
       "metadata": {
         "id": "a40b91C-fr56",
         "colab_type": "code",
+        "outputId": "f2452ffe-f1d4-47cc-8fb8-f0113b6d8700",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 105
-        },
-        "outputId": "79aa640f-155a-4f12-9e94-6e3697de22e5"
+        }
       },
       "source": [
         "print(classifier_fn)"
       ],
-      "execution_count": 54,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -246,6 +246,19 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dm6lCjpwi0B5",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print(model)"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -266,15 +279,14 @@
       },
       "source": [
         "def GradCAM(img, c, features_fn, classifier_fn):\n",
-        "    feats = features_fn(img.cuda())\n",
+        "    feats = features_fn(img.to(device))\n",
         "    _, N, H, W = feats.size() #[1,2048,7,7]\n",
         "    out = classifier_fn(feats) #out: [1,1000]\n",
         "    c_score = out[0, c]   #c_scoreとは？？\n",
+        "    #print(c)\n",
+        "    #print(c_score)\n",
         "\n",
-        "    print(c)\n",
-        "    print(c_score)\n",
-        "\n",
-        "    grads = torch.autograd.grad(c_score, feats)\n",
+        "    grads = torch.autograd.grad(outputs=c_score,inputs=feats) #feats(Xに相当)を微分\n",
         "    w = grads[0][0].mean(-1).mean(-1)           #ここでGlobalAveragePoolingをしている\n",
         "    sal = torch.matmul(w, feats.view(N, H*W))\n",
         "    sal = sal.view(H, W).cpu().detach().numpy()\n",
@@ -299,17 +311,17 @@
       "metadata": {
         "id": "sEjgG-TblTaJ",
         "colab_type": "code",
+        "outputId": "95205c51-2716-4d24-e756-c16a018652be",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 337
-        },
-        "outputId": "1a71393d-f893-4fe8-ac5e-13f307bfb7af"
+          "height": 231
+        }
       },
       "source": [
-        "mg_path = '/content/drive/My Drive/AI_laboratory_course/goldenretriever-3724972_640.jpg'\n",
-        "img_tensor = read_tensor(img_path)\n",
+        "img_path = '/content/drive/My Drive/AI_laboratory_course/goldenretriever-3724972_640.jpg'\n",
+        "img_tensor = read_tensor(img_path) #ここに前処理も含まれる\n",
         "#Softmaxにかけたときの確率上位3つのpp(確率)とcc(class番号)を取得\n",
-        "pp, cc = torch.topk(nn.Softmax(dim=1)(model(img_tensor.cuda())), 3)\n",
+        "pp, cc = torch.topk(nn.Softmax(dim=1)(model(img_tensor.to(device))), 3)\n",
         "\n",
         "plt.figure(figsize=(15, 5))\n",
         "#pとcを対にして入力\n",
@@ -329,20 +341,8 @@
         "    plt.imshow(np.array(sal), alpha=0.5, cmap='jet')\n",
         "plt.show()"
       ],
-      "execution_count": 67,
+      "execution_count": 35,
       "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "207\n",
-            "tensor(15.1943, device='cuda:0', grad_fn=<SelectBackward>)\n",
-            "219\n",
-            "tensor(11.1446, device='cuda:0', grad_fn=<SelectBackward>)\n",
-            "213\n",
-            "tensor(10.6133, device='cuda:0', grad_fn=<SelectBackward>)\n"
-          ],
-          "name": "stdout"
-        },
         {
           "output_type": "display_data",
           "data": {
@@ -354,6 +354,44 @@
           "metadata": {
             "tags": []
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jwakfS_QnB16",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "af5fa012-d6c1-46ad-e6b9-14c0f4576116"
+      },
+      "source": [
+        "import numpy as np\n",
+        "import torch\n",
+        "from torch import tensor\n",
+        "\n",
+        "x = tensor(1.0, requires_grad=True)\n",
+        "y = x**3\n",
+        "grads = torch.autograd.grad(outputs=y, inputs=x, create_graph=True)\n",
+        "grads[0].backward()\n",
+        "x.grad # yに対するxの2階微分 (tensor(6.))"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(6.)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 29
         }
       ]
     }
