--- a/Pytorch_転移学習tutorial_Applstra_attention_residual_network.ipynb
+++ b/Pytorch_転移学習tutorial_Applstra_attention_residual_network.ipynb
@@ -102,7 +102,11 @@
       "metadata": {
         "id": "T_Xvn-zaJSao",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 178
+        },
+        "outputId": "e87ed62f-1c83-4b39-d701-1eb50a4ec7b0"
       },
       "source": [
         "'''\n",
@@ -125,8 +129,23 @@
         "!date -R\n",
         "!ls"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "··········\n",
+            "Mounted at /content/drive\n",
+            "Sun, 15 Mar 2020 01:23:10 +0000\n",
+            "Sun, 15 Mar 2020 01:23:22 +0000\n",
+            "drive  sample_data  train  val\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -144,10 +163,10 @@
       "metadata": {
         "id": "2Xcl55uJknDK",
         "colab_type": "code",
-        "outputId": "aaee12ef-11eb-46d4-f4ba-099a1d0962fa",
+        "outputId": "722c2195-fe27-4d1e-ada0-5f885558eea6",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 140
+          "height": 133
         }
       },
       "source": [
@@ -286,7 +305,7 @@
         "\n",
         "  \n",
         "  #モデルの訓練\n",
-        "  def train_model(model, criterion, optimizer, scheduler, patience, num_epochs):\n",
+        "def train_model(model, criterion, optimizer, scheduler, patience, num_epochs):\n",
         "    since = time.time()\n",
         "\n",
         "    best_model_wts = copy.deepcopy(model.state_dict())\n",
@@ -412,20 +431,15 @@
         "\n",
         "\n"
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "['appl', 'stra']\n",
-            "appl_train:252\n",
-            "stra_train:252\n",
-            "appl_val:67\n",
-            "stra_val:60\n",
-            "training data set_total：504\n",
-            "validating data set_total：127\n"
-          ],
-          "name": "stdout"
+          "output_type": "error",
+          "ename": "IndentationError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-11a9c928969a>\"\u001b[0;36m, line \u001b[0;32m135\u001b[0m\n\u001b[0;31m    def train_model(model, criterion, optimizer, scheduler, patience, num_epochs):\u001b[0m\n\u001b[0m                                                                                  ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
+          ]
         }
       ]
     },
